fix navbar not displaying fully on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,10 @@ header img {
   }
 }
 
+#bootstrap-overrides .navbar-header {
+  padding-top: 1em;
+}
+
 section {
   border-top: medium solid white;
 }
